@@ -11,32 +11,57 @@ import java.util.List;
 @Service
 public class SlotGameServiceImpl implements ISlotGameService {
 
+    /*
+        Given the slot game definition, then perform a spin and return the result:
+        1. the result will include the matched payout information (i.e. which payline, and payout amount)
+        2. total payout return to the player
+     */
     @Override
     public SlotSpinResult spin(final SlotGameDefinition slotGameDefinition){
 
         final Slot slot = slotGameDefinition.getSlot();
         final List<PayoutDefinition> payoutDefinitions = slotGameDefinition.getPayoutDefinitions();
 
-        List<List<Symbol>> outcomes = slot.spin();
+        final List<List<Symbol>> outcomes = slot.spin();
 
-        List<Payout> payouts = payoutDefinitions.stream()
+        return slotSpinResult(outcomes, payoutDefinitions);
+    }
+
+    /*
+        Given the slot game definition, then perform a spin and return the result:
+        1. the result will include the matched payout information (i.e. which payline, and payout amount)
+        2. total payout return to the player
+     */
+    private SlotSpinResult slotSpinResult(final List<List<Symbol>> outcomes,
+                                          final List<PayoutDefinition> payoutDefinitions){
+
+        final List<SlotSpinPayout> payouts = payoutDefinitions.stream()
                 .map(payoutDefinition -> payoutForSpecificPayline(outcomes, payoutDefinition))
                 .filter(payout-> payout.getPayoutAmount() > 0)
                 .toList();
 
         return new SlotSpinResult(outcomes, payouts);
+
     }
 
-    private Payout payoutForSpecificPayline(final List<List<Symbol>> outcomes,
-                                        final PayoutDefinition payoutDefinition){
+    /*
+        calculate the payout regardless of matched or not
+        if matched -> payout amount > 0
+        else -> payout amount = 0
+     */
+    private SlotSpinPayout payoutForSpecificPayline(final List<List<Symbol>> outcomes,
+                                                    final PayoutDefinition payoutDefinition){
 
         final int payoutAmount = calculatePayout(
                                 extractOutcomeSymbolByCoordinates(outcomes, payoutDefinition.getPayline().getPaylineCoordinates()),
                                 payoutDefinition);
 
-        return new Payout(payoutDefinition, payoutAmount);
+        return new SlotSpinPayout(payoutDefinition, payoutAmount);
     }
 
+    /*
+        helper function, extract the symbols from the given outcomes by the coordinates list
+     */
     private List<Symbol> extractOutcomeSymbolByCoordinates(final List<List<Symbol>> outcomes,
                                                             final List<PaylineCoordinate> coordinates){
 
@@ -50,7 +75,7 @@ public class SlotGameServiceImpl implements ISlotGameService {
                         throw new PaylineException(
                                 String.format("Invalid payline: given dimension is: (%d, %d), requiring (%d, %d)",
                                         outcomes.size(),
-                                        outcomes.get(0).size(),
+                                        outcomes.getFirst().size(),
                                         coordinate.getReelIndex(),
                                         coordinate.getRowIndex()));
                     }
